--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,13 +1,13 @@
 modLoader = "javafml"
 loaderVersion = "[47,)"
-#issueTrackerURL = ""
-license = "Insert License Here"
+issueTrackerURL = "https://github.com/Nova-Committee/AvaritiaDelight/issues"
+license = "MIT"
 
 [[mods]]
 modId = "avaritia_delight"
 version = "${version}"
 displayName = "Avaritia's Delight"
-authors = "Me!"
+authors = "IAFEnvoy"
 description = '''
 This is an example description! Tell everyone what your mod is about!
 '''
