--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,6 @@ avaritia_fabric_version=6YlQtEx9
 # Farmers Delight
 delight_forge_version=NcRp00OO
 delight_fabric_version=ZnoPlYRz
+# PortingLib for dependencies
+port_lib_version=2.3.4
+port_lib_modules=asm,accessors,attributes,base,client_events,core,common,config,data,entity,extensions,items,models,tags,tool_actions,transfer,loot,utility,networking,recipe_book_categories
