--- a/common/build.gradle
+++ b/common/build.gradle
@@ -14,7 +14,6 @@ dependencies {
     modImplementation "maven.modrinth:re-avaritia:$rootProject.avaritia_fabric_version"
     modImplementation "maven.modrinth:farmers-delight-refabricated:$rootProject.delight_fabric_version"
 
-    compileOnly "io.github.fabricators_of_create.Porting-Lib:base:2.3.4+1.20.1"
-    compileOnly "io.github.fabricators_of_create.Porting-Lib:extensions:2.3.4+1.20.1"
-    compileOnly "io.github.fabricators_of_create.Porting-Lib:tool_actions:2.3.4+1.20.1"
+    for (String module in rootProject.port_lib_modules.split(","))
+        modCompileOnly "io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version+$minecraft_version"
 }
