--- a/common/src/main/resources/assets/avaritia_delight/models/item/infinity_apple.json
+++ b/common/src/main/resources/assets/avaritia_delight/models/item/infinity_apple.json
@@ -1,6 +1,14 @@
 {
   "parent": "item/generated",
   "textures": {
-    "layer0": "avaritia_delight:item/infinity_apple"
+    "layer0": "avaritia_delight:item/infinity_apple",
+    "halo": "avaritia:misc/halo"
+  },
+  "loader": "avaritia:halo",
+  "halo": {
+    "texture": "#halo",
+    "color": -16777216,
+    "size": 6,
+    "pulse": false
   }
 }
