--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -41,6 +41,13 @@ dependencies {
 
     for (String module in rootProject.port_lib_modules.split(","))
         modRuntimeOnly "io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version+$minecraft_version"
+
+    if (recipe_viewer == "jei")
+        modRuntimeOnly "mezz.jei:jei-${minecraft_version}-fabric:${jei_version}"
+    else if (recipe_viewer == "emi")
+        modRuntimeOnly "dev.emi:emi-fabric:${emi_version}"
+    else
+        throw new IllegalArgumentException("Unknown recipe viewer: " + recipe_viewer)
 }
 
 processResources {
