--- a/common/build.gradle
+++ b/common/build.gradle
@@ -16,4 +16,7 @@ dependencies {
 
     for (String module in rootProject.port_lib_modules.split(","))
         modCompileOnly "io.github.fabricators_of_create.Porting-Lib:$module:$port_lib_version+$minecraft_version"
+
+    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-fabric-api:${jei_version}")
+    modCompileOnly "dev.emi:emi-xplat-intermediary:${emi_version}:api"
 }
