--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -41,6 +41,13 @@ dependencies {
 
     modImplementation "maven.modrinth:re-avaritia:$rootProject.avaritia_forge_version"
     modImplementation "maven.modrinth:farmers-delight:$rootProject.delight_forge_version"
+
+    if (recipe_viewer == "jei")
+        modImplementation "mezz.jei:jei-${minecraft_version}-forge:${jei_version}"
+    else if (recipe_viewer == "emi")
+        modRuntimeOnly "dev.emi:emi-forge:${emi_version}"
+    else
+        throw new IllegalArgumentException("Unknown recipe viewer: " + recipe_viewer)
 }
 
 processResources {
