--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 # Mod properties
-mod_version=1.0.0
+mod_version=0.1-alpha.1
 maven_group=committee.nova.mods.avaritiadelight
 archives_name=avaritia_delight
 enabled_platforms=fabric,forge
@@ -23,3 +23,7 @@ delight_fabric_version=ZnoPlYRz
 # PortingLib for dependencies
 port_lib_version=2.3.4
 port_lib_modules=asm,accessors,attributes,base,client_events,core,common,config,data,entity,extensions,items,models,tags,tool_actions,transfer,loot,utility,networking,recipe_book_categories
+# JEI & EMI
+jei_version=15.20.0.106
+emi_version=1.1.20+1.20.1
+recipe_viewer=emi
