--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ license = "MIT"
 modId = "avaritia_delight"
 version = "${version}"
 displayName = "Avaritia's Delight"
-authors = "IAFEnvoy"
+authors = "IAFEnvoy, MHanHanBing"
 description = '''
 Do you want to eat some avarita food?
 '''
@@ -30,6 +30,6 @@ side = "BOTH"
 [[dependencies.avaritia_delight]]
 modId = "architectury"
 mandatory = true
-versionRange = "[9.2.14,)"
+versionRange = "[0,)"
 ordering = "AFTER"
 side = "BOTH"
